--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "docx": "^9.3.0",
+    "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.6.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "sass": "^1.86.0"
+    "react-toastify": "^11.0.5",
+    "sass": "^1.86.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
